modules/python: Deprecate find_installation without positional arg
When the `name_or_path` argument is omitted, the returned Python
installation will be the one used to run Meson. But that is really
an implementation detail that should not be useful to projects
other than Meson itself. There can also be Meson implementation
in other languages where returning anything does not make sense.

Moreover, some people started relying on various expectations like that:

* Meson uses Python 3.5 or newer
  https://github.com/open-source-parsers/jsoncpp/pull/1185#issuecomment-648477071
* Python used by Meson is guaranteed to provide both 'xml' and 'pkg_resources' modules
  https://github.com/hughsie/libjcat/pull/28#issue-396664536

What is more, Meson can use a different Python interpreter than the one
available in `PATH` so if the project needs some extra Python modules,
it gets complicated. Using minimal bootstrapping Python for Meson,
and cross-compilation are just two common use cases, where this can occur.

Applications should instead explicitly list their requirements
by passing `python3` as positional arg and `modules` as kwarg.

Fixes: https://github.com/mesonbuild/meson/issues/7415

--- a/test cases/python/4 custom target depends extmodule/meson.build
+++ b/test cases/python/4 custom target depends extmodule/meson.build
@@ -8,7 +8,7 @@ if meson.backend() != 'ninja'
 endif
 
 py_mod = import('python')
-py3 = py_mod.find_installation()
+py3 = py_mod.find_installation('python3')
 py3_dep = py3.dependency(required : false)
 cc = meson.get_compiler('c')
 
