--- a/test cases/python/7 install path/meson.build
+++ b/test cases/python/7 install path/meson.build
@@ -5,6 +5,6 @@ project('install path',
   ]
 )
 
-py = import('python').find_installation()
+py = import('python').find_installation('python3')
 py.install_sources('test.py')
 py.install_sources('test.py', pure: false)
