--- a/test cases/cython/1 basic/meson.build
+++ b/test cases/cython/1 basic/meson.build
@@ -5,7 +5,7 @@ project(
 )
 
 py_mod = import('python')
-py3 = py_mod.find_installation()
+py3 = py_mod.find_installation('python3')
 py3_dep = py3.dependency(required : false)
 if not py3_dep.found()
   error('MESON_SKIP_TEST: Python library not found.')
