--- a/test cases/python/3 cython/meson.build
+++ b/test cases/python/3 cython/meson.build
@@ -11,7 +11,7 @@ if not cython.found()
 endif
 
 py_mod = import('python')
-py3 = py_mod.find_installation()
+py3 = py_mod.find_installation('python3')
 py3_dep = py3.dependency(required: false)
 if not py3_dep.found()
   error('MESON_SKIP_TEST: Python library not found.')
