--- a/test cases/unit/103 python without pkgconfig/meson.build
+++ b/test cases/unit/103 python without pkgconfig/meson.build
@@ -1,4 +1,4 @@
 project('python wihtout pkgconfig', 'c')
 
 # This unit test is ran with PKG_CONFIG=notfound
-import('python').find_installation().dependency()
+import('python').find_installation('python3').dependency()
