--- a/test cases/unit/74 dep files/meson.build
+++ b/test cases/unit/74 dep files/meson.build
@@ -1,6 +1,6 @@
 project('test', 'c')
 
-python = import('python').find_installation()
+python = import('python').find_installation('python3')
 
 lib = library('foo', 'foo.c')
 
