--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,8 @@ console_scripts =
   meson = mesonbuild.mesonmain:main
 
 [options.extras_require]
+ninja =
+  ninja>=1.8.2
 progress =
   tqdm
 typing =
