Add public kwarg to set_variable()
This deprecate subp.get_variable() unless the variable has been
explicitly set public by the subproject. This avoids poking at random
internal variables of a subproject and instead define what is their
public build API.

--- a/test cases/common/241 set and get variable/meson.build
+++ b/test cases/common/241 set and get variable/meson.build
@@ -69,3 +69,7 @@ assert(not is_disabler(list_t1))
 assert(not is_disabler(list_t2))
 assert(not is_disabler(list_t3))
 assert(not is_disabler(list_t4))
+
+sub = subproject('sub')
+assert(sub.get_variable('private') == 'private')
+assert(sub.get_variable('public') == 'public')
