add GitHub URL for PyPi

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ description = A high performance build system
 author = Jussi Pakkanen
 author_email = jpakkane@gmail.com
 url = https://mesonbuild.com
+project_urls =
+    Source = https://github.com/mesonbuild/meson
 keywords =
   meson
   mesonbuild
