add GitHub URL for PyPi

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,13 @@
 name = meson
 version = attr: mesonbuild.coredata.version
 description = A high performance build system
+long_description = file: README.md
+long_description_content_type = text/markdown
 author = Jussi Pakkanen
 author_email = jpakkane@gmail.com
 url = https://mesonbuild.com
+project_urls =
+    Source = https://github.com/mesonbuild/meson
 keywords =
   meson
   mesonbuild
