Fix @typed_pos_args on java.generate_native_headers

--- a/test cases/java/9 jni/meson.build
+++ b/test cases/java/9 jni/meson.build
@@ -16,6 +16,17 @@ java = find_program('java')
 jni_dep = dependency('jni', version : '>=1.8', modules: ['jvm', 'awt'])
 
 # generate native headers
-subdir('src/com/mesonbuild')
-subdir('lib')
 subdir('src')
+subdir('lib')
+
+test(
+  'jnitest',
+  java,
+  args: [
+    '-Djava.library.path=@0@'.format(fs.parent(jnijava.full_path())),
+    '-jar',
+    jnijar,
+  ],
+  protocol : 'exitcode',
+  depends : [jnijava],
+)
