--- a/test cases/java/9 jni/src/meson.build
+++ b/test cases/java/9 jni/src/meson.build
@@ -1,17 +1,9 @@
+sources = [files('com/mesonbuild/JniTest.java')]
+
+subdir('com/mesonbuild')
+
 jnijar = jar(
   'jnijar',
-  'com' / 'mesonbuild' / 'JniTest.java',
+  sources,
   main_class : 'com.mesonbuild.JniTest',
-)
-
-test(
-  'jnitest',
-  java,
-  args: [
-    '-Djava.library.path=@0@'.format(fs.parent(jnijava.full_path())),
-    '-jar',
-    jnijar,
-  ],
-  protocol : 'exitcode',
-  depends : [jnijava],
 )
