dependencies: move DependencyVariableString handling to declare_dependency
This allows tracking which subproject it came from at the time of
definition, rather than the time of use. As a result, it is no longer
possible for one subproject which knows that another subproject installs
some data files, to expose those data files via its own
declare_dependency.

--- a/test cases/failing/123 subproject sandbox violation/meson.build
+++ b/test cases/failing/123 subproject sandbox violation/meson.build
@@ -6,10 +6,19 @@ sub1_mustfail = sub1_d.get_variable('dir') / '..' / 'file.txt'
 sub2_d = subproject('subproj2').get_variable('d')
 sub2_mustfail = sub2_d.get_variable('dir') / 'file.txt'
 
+main_d = declare_dependency(
+    variables: [
+        'dir=@0@'.format(meson.current_source_dir()),
+    ]
+)
+main_mustfail = main_d.get_variable('dir') / 'subprojects/subproj3/file.txt'
+
 if get_option('failmode') == 'parent-dir'
     mustfail = sub1_mustfail
 elif get_option('failmode') == 'not-installed'
     mustfail = sub2_mustfail
+elif get_option('failmode') == 'root-subdir'
+    mustfail = main_mustfail
 endif
 
 custom_target(
