--- a/test cases/failing/123 subproject sandbox violation/meson_options.txt
+++ b/test cases/failing/123 subproject sandbox violation/meson_options.txt
@@ -1,1 +1,1 @@
-option('failmode', type: 'combo', choices: ['parent-dir', 'not-installed'])
+option('failmode', type: 'combo', choices: ['parent-dir', 'not-installed', 'root-subdir'])
