string: Add length() method
While it was possible to access to the last elements of a string via
negative indexing, it was not possible easily iterate through it or to
check nicely whether it was empty or of an expected size (without comparisons
with another expected string).

Also it was not possible to iterate through it, now with the range()
method it would be possible to go char-by-char, but strings doesn't
expose their length so add a method to fill this gap.

--- a/test cases/common/35 string operations/meson.build
+++ b/test cases/common/35 string operations/meson.build
@@ -19,6 +19,15 @@ long = 'abcde'
 prefix = 'abc'
 suffix = 'cde'
 
+assert(''.length() == 0)
+assert(long.length() == 5)
+assert(prefix.length() == 3)
+
+expected_long_chars = ['a', 'b', 'c', 'd', 'e']
+foreach i: range(long.length())
+  assert(long[i] == expected_long_chars[i])
+endforeach
+
 assert(long[0] == 'a')
 assert(long[2] == 'c')
 
