compiler.find_library: Also search lib dirs from link_args
Resolves mesonbuild/meson#10172

--- a/test cases/unit/16 prebuilt static/libdir/meson.build
+++ b/test cases/unit/16 prebuilt static/libdir/meson.build
@@ -1,5 +1,15 @@
+search_dir = get_option('search_dir')
+if search_dir == 'auto'
+  search_dir = meson.current_source_dir()
+elif search_dir == 'none'
+  search_dir = []
+endif
+
 cc = meson.get_compiler('c')
-stlib = cc.find_library('best', dirs : meson.current_source_dir())
+stlib = cc.find_library('best', dirs : search_dir)
+stlib2 = cc.find_library('best', static : true, dirs : search_dir)
 
 best_dep = declare_dependency(dependencies : stlib,
+  include_directories : include_directories('.'))
+best_dep2 = declare_dependency(dependencies : stlib2,
   include_directories : include_directories('.'))
