--- a/test cases/unit/16 prebuilt static/meson.build
+++ b/test cases/unit/16 prebuilt static/meson.build
@@ -3,3 +3,4 @@ project('prebuilt static lib', 'c')
 subdir('libdir')
 
 test('static', executable('mainprog', 'main.c', dependencies : best_dep))
+test('static2', executable('mainprog2', 'main.c', dependencies : best_dep2))
