--- a/docs/yaml/functions/message.yaml
+++ b/docs/yaml/functions/message.yaml
@@ -8,14 +8,18 @@ description: |
   status argument is used, the `Message:` prefix will be omitted
   and a colon will be added after the message and before the status.
 
+  The `extra_info` can be used together with the `status` to print
+  additional information relevant to the status, like a version number
+  or failure reason, etc.
+
 example: |
   ```meson
-  message('Found usable MinGW', status: true)
+  message('Found usable MinGW version', status: true, extra_info: '10.0')
   ```
 
   Output:
   ```
-  Found usable MinGW: YES
+  Found usable MinGW version: YES (10.0)
   ```
 
 posargs:
@@ -34,3 +38,9 @@ kwargs:
     type: bool
     since: 0.63.0
     description: Status to print as YES/NO after the message.
+  extra_info:
+    type: str
+    since: 0.63.0
+    description: |
+      Additional info to print in parentheses after the status.
+      It can not be used without the status kwarg.
