Convert if...error checks to assert() in string arithmetic tests

--- a/test cases/common/62 string arithmetic/meson.build
+++ b/test cases/common/62 string arithmetic/meson.build
@@ -1,16 +1,8 @@
 project('string arithmetic', 'c')
 
-if 'foo' + 'bar' != 'foobar'
-  error('String concatenation is broken')
-endif
-
-if 'foo' + 'bar' + 'baz' != 'foobarbaz'
-  error('Many-string concatenation is broken')
-endif
+assert('foo' + 'bar' == 'foobar')
+assert('foo' + 'bar' + 'baz' == 'foobarbaz')
 
 a = 'a'
 b = 'b'
-
-if a + b + 'c' != 'abc'
-  error('String concat with variables is broken.')
-endif
+assert(a + b + 'c' == 'abc')
