Convert all test from the python3 module to python.

--- a/test cases/failing/57 assign custom target index/meson.build
+++ b/test cases/failing/57 assign custom target index/meson.build
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-prog_python = import('python3').find_python()
+prog_python = import('python').find_installation()
 
 target = custom_target(
   'target',
