--- a/test cases/unit/85 cpp modules/meson.build
+++ b/test cases/unit/85 cpp modules/meson.build
@@ -1,17 +1,9 @@
 project('cppmodules', 'cpp', default_options: ['cpp_std=c++latest'])
 
-e = executable('modtest',
-    'main.cpp',
-    'src0.ixx',
-    'src1.ixx',
-    'src2.ixx',
-    'src3.ixx',
-    'src4.ixx',
-    'src5.ixx',
-    'src6.ixx',
-    'src7.ixx',
-    'src8.ixx',
-    'src9.ixx',
-    )
+cpp = meson.get_compiler('cpp')
 
-test('modtest', e)
+if cpp.get_id() == 'msvc'
+    subdir('vs')
+else
+    error('Unknown compiler')
+endif
