--- a/test cases/unit/85 cpp modules/meson.build
+++ b/test cases/unit/85 cpp modules/meson.build
@@ -4,6 +4,8 @@ cpp = meson.get_compiler('cpp')
 
 if cpp.get_id() == 'msvc'
     subdir('vs')
+elif cpp.get_id() == 'gcc'
+    subdir('gcc')
 else
     error('Unknown compiler')
 endif
