interpreter: add a strict mode for feature.disable_auto_if
Mesa has a number of cases of long if checks for features to determine
if the feature should be converted from an auto into an enabled or
disabled (using booleans, because it's old). For Mesa's case though, we
want to ensure that the new feature returns is either `auto` or
`disabled`, and never `enabled`, but currently `disable_auto_if` allows
this, only changing auto but ignoring enabled.

Thus I've added a `strict` keyword (false by default), which make it an
error for `disable_auto_if` to return an `enabled()` feature, it will
only return an `auto()` or `disabled()` feature.

I've implemented this in a backwards compatible way, so that existing
users are not affected.

TODO: needs failure tests.

--- a/docs/yaml/objects/feature.yaml
+++ b/docs/yaml/objects/feature.yaml
@@ -27,16 +27,35 @@ methods:
   description: |
     Returns the feature, with `'auto'` converted to `'disabled'` if value is true.
 
+    If the optional `strict` keyword argument is `true`, then it is an error if
+    the returned option is not set to disabled.
+
     | Feature / Condition | `value = true` | `value = false` |
     | ------------------- | -------------- | --------------- |
-    | Enabled             | Enabled        | Enabled         |
+    | Enabled             | Enabled/error* | Enabled/error*  |
     | Disabled            | Disabled       | Disabled        |
     | Auto                | Disabled       | Auto            |
+
+    \* If strict is `false` then Enabled is returned, if it is `true` then an
+    error is raised
 
   posargs:
     value:
       type: bool
       description: See the table above
+
+  kwargs:
+    strict:
+      type: bool
+      since: '0.63.0'
+      default: false
+      description: The error message to print if the check fails
+
+    error_message:
+      type: str
+      since: '0.63.0'
+      default: "''"
+      description: The error message to print if the check fails
 
 - name: require
   returns: feature
