--- a/test cases/common/192 feature option/meson.build
+++ b/test cases/common/192 feature option/meson.build
@@ -23,6 +23,8 @@ assert(required_opt.disable_auto_if(true).enabled(), 'Should be enabled option')
 assert(required_opt.disable_auto_if(false).enabled(), 'Should be enabled option')
 assert(mt.catch(required_opt, 'disable_auto_if', msg, true, strict : true, error_message : msg), 'Should have raised an error')
 assert(not mt.catch(required_opt, 'disable_auto_if', msg, true, strict : false, error_message : msg), 'Should not have raised an error')
+assert(required_opt.enable_auto_if(true).enabled(), 'Should be enabled option')
+assert(required_opt.enable_auto_if(false).enabled(), 'Should be enabled option')
 
 assert(not optional_opt.enabled(), 'Should be auto option')
 assert(not optional_opt.disabled(), 'Should be auto option')
@@ -32,6 +34,8 @@ assert(optional_opt.require(true).auto(), 'Should be auto option')
 assert(optional_opt.require(false, error_message: 'xyz').disabled(), 'Should be disabled auto option')
 assert(optional_opt.disable_auto_if(true).disabled(), 'Should be disabled auto option')
 assert(optional_opt.disable_auto_if(false).auto(), 'Should be auto option')
+assert(optional_opt.enable_auto_if(true).enabled(), 'Should be enabled auto option')
+assert(optional_opt.enable_auto_if(false).auto(), 'Should be auto option')
 
 assert(not disabled_opt.enabled(), 'Should be disabled option')
 assert(disabled_opt.disabled(), 'Should be disabled option')
@@ -41,6 +45,10 @@ assert(disabled_opt.require(true).disabled(), 'Should be disabled option')
 assert(disabled_opt.require(false, error_message: 'xyz').disabled(), 'Should be disabled option')
 assert(disabled_opt.disable_auto_if(true).disabled(), 'Should be disabled option')
 assert(disabled_opt.disable_auto_if(false).disabled(), 'Should be disabled option')
+assert(disabled_opt.enable_auto_if(true).disabled(), 'Should be disabled option')
+assert(disabled_opt.enable_auto_if(false).disabled(), 'Should be disabled option')
+assert(mt.catch(disabled_opt, 'enable_auto_if', msg, true, strict : true, error_message : msg), 'Should have raised an error')
+assert(not mt.catch(disabled_opt, 'enable_auto_if', msg, true, strict : false, error_message : msg), 'Should not have raised an error')
 
 dep = dependency('threads', required : required_opt)
 assert(dep.found(), 'Should find required "threads" dep')
