interpreter: Add feature_option.force
Which forces the value to `enabled` if the positional argument is
`true`, `disabled`, if it is `false`, and errors if it cannot.

This is equivalent to:
```meson
feat.enable_auto_if(true).disable_auto_if(false)
assert(not feat.auto(), err)
```

--- a/docs/yaml/objects/feature.yaml
+++ b/docs/yaml/objects/feature.yaml
@@ -152,3 +152,21 @@ methods:
       type: str
       default: "''"
       description: The error Message to print if the check fails
+
+- name: force
+  since: 0.63.0
+  returns: feature
+  description: |
+    Returns the feature as `enabled` if the positional value is `true`, `disabled`
+    if it is `false`, or raises an error.
+
+  posargs:
+    value:
+      type: bool
+      description: Wehther to enable (`true`) or disable (`false`) the feature
+
+  kwargs:
+    error_message:
+      type: str
+      default: "''"
+      description: The error message to print if the check fails
