--- a/test cases/common/221 zlib/meson.build
+++ b/test cases/common/221 zlib/meson.build
@@ -1,6 +1,6 @@
 project('zlib system dependency', 'c')
 
-if not ['darwin', 'freebsd', 'dragonfly', 'windows', 'android'].contains(host_machine.system())
+if not ['darwin', 'freebsd', 'dragonflybsd', 'windows', 'android'].contains(host_machine.system())
   error('MESON_SKIP_TEST only applicable on macOS, FreeBSD, DragonflyBSD, Windows, and Android.')
 endif
 
