--- a/docs/yaml/functions/benchmark.yaml
+++ b/docs/yaml/functions/benchmark.yaml
@@ -27,7 +27,7 @@ posargs:
 
 kwargs:
   args:
-    type: list[str | file | tgt]
+    type: list[str | file | build_tgt | custom_tgt | custom_idx]
     description: Arguments to pass to the executable
 
   env:
