add missing args for get_supported_function_attributes

--- a/docs/yaml/objects/compiler.yaml
+++ b/docs/yaml/objects/compiler.yaml
@@ -582,6 +582,10 @@ methods:
       description: The attribute name to check.
 
 - name: get_supported_function_attributes
+  varargs:
+    name:
+      type: str
+      description: The attribute name to check.
   returns: list[str]
   since: 0.48.0
   description: |
