fix varargs annotation

--- a/docs/yaml/objects/compiler.yaml
+++ b/docs/yaml/objects/compiler.yaml
@@ -583,9 +583,10 @@ methods:
 
 - name: get_supported_function_attributes
   varargs:
-    name:
-      type: str
-      description: The attribute name to check.
+    name: name
+    type: str
+    min_varargs: 1
+    description: The attribute names to check.
   returns: list[str]
   since: 0.48.0
   description: |
