tests: fix targets with no sources
This was never supposed to be possible, so stop doing it.

--- a/test cases/common/215 source set realistic example/meson.build
+++ b/test cases/common/215 source set realistic example/meson.build
@@ -30,6 +30,7 @@ subdir('devices')
 if meson.is_unity()
   specific.add_all(common)
   common = ss.source_set()
+  common.add(files('dummy.cpp'))
 endif
 
 common_lib = static_library('common', common.all_sources(),
