docs: fix incorrect info for declare_dependency sources
The type information is clearly wrong as it disagrees with the
description w.r.t. generated headers.

We also rely on it accepting custom targets for the obvious reason that
we accept it in a build target too! In fact, we rely on this in the
testsuite too.

--- a/docs/yaml/functions/declare_dependency.yaml
+++ b/docs/yaml/functions/declare_dependency.yaml
@@ -37,7 +37,7 @@ kwargs:
     description: Libraries to link fully, same as [[executable]].
 
   sources:
-    type: list[str | file]
+    type: list[str | file | custom_tgt | custom_idx | generated_list]
     description: |
       sources to add to targets
       (or generated header files
