--- a/docs/yaml/functions/custom_target.yaml
+++ b/docs/yaml/functions/custom_target.yaml
@@ -31,7 +31,9 @@ description: |
   - `@OUTDIR@`: the full path to the directory where the output(s) must be written
   - `@DEPFILE@`: the full path to the dependency file passed to `depfile`
   - `@PLAINNAME@`: the input filename, without a path
-  - `@BASENAME@`: the input filename, with extension removed
+  - `@PLAINNAMES@`: each intput filename, with the extension removed (since 0.63.0)
+  - `@BASENAME@`: the input filename, without a path with extension removed
+  - `@BASENAMES@`: each input filename, without a path, with the extension removed (since 0.63.0)
   - `@PRIVATE_DIR@` *(since 0.50.1)*: path to a directory where the custom target must store all its intermediate files.
   - `@SOURCE_ROOT@`: the path to the root of the source tree. Depending on the backend,
     this may be an absolute or a relative to current workdir path.
