--- a/docs/yaml/functions/declare_dependency.yaml
+++ b/docs/yaml/functions/declare_dependency.yaml
@@ -59,11 +59,11 @@ kwargs:
       pkg-config. *since 0.56.0* it can also be a list of `'key=value'` strings.
 
   d_module_versions:
-    type: str | list[str]
+    type: str | int | list[str | int]
     since: 0.62.0
     description: |
-      a string or a list of strings,
-      the D versions to add during the compilation of D source files
+      The [D version identifiers](https://dlang.org/spec/version.html#version) to add
+      during the compilation of D source files.
 
   d_import_dirs:
     type: list[inc | str]
