Set project(meson_version : ) to default to 0.37
This is the oldest version we have feature new/deprecation warnings for,
and is also more then 5 years old. By setting a default new feature and
deprecation warnings will be triggered, which will help as we consider
removing deprecated features around the 1.0 release.

This also requires updating the summary test to add warnings. I've
decided that having warnings in the test makes sense, so we have some
coverage of warnings as well.

--- a/test cases/unit/34 command line/meson.build
+++ b/test cases/unit/34 command line/meson.build
@@ -1,5 +1,6 @@
 project('command line test', 'c',
-  default_options : ['default_library=static', 'set_sub_opt=true']
+  default_options : ['default_library=static', 'set_sub_opt=true'],
+  meson_version : '>= 0.38',
 )
 
 if get_option('set_sub_opt')
