--- a/test cases/warning/5 fallback consistency/meson.build
+++ b/test cases/warning/5 fallback consistency/meson.build
@@ -1,4 +1,4 @@
-project('fallback consistency')
+project('fallback consistency', meson_version : '>= 0.54.0')
 
 # Subproject overrides foo with foo_dep but wrap file says it's bar_dep. This should warn.
 dependency('foo')
