--- a/test cases/warning/5 fallback consistency/subprojects/foo/meson.build
+++ b/test cases/warning/5 fallback consistency/subprojects/foo/meson.build
@@ -1,4 +1,4 @@
-project('sub')
+project('sub', meson_version : '>= 0.54.0')
 
 foo_dep = declare_dependency()
 meson.override_dependency('foo', foo_dep)
