interpreter: fix both libraries with `pic : false` and generators
If we have a call to `both_libraries()` with `pic : false` (or are using
the xcode backend), then we are forced to compile all of the sources
twice, once for the static library and once for the shared library. If
there is a generator in the sources, then we will create two rules that
produce the same output, and configuration will fail.

To avoid that, when this happens, rename the static library so that the
static and shared libraries will get separate folder in the build tree,
and no collision will happen.

--- a/test cases/common/178 bothlibraries/meson.build
+++ b/test cases/common/178 bothlibraries/meson.build
@@ -1,6 +1,10 @@
 project('both libraries linking test', 'c')
 
 both_libs = both_libraries('mylib', 'libfile.c')
+
+gen = generator(find_program('gen.py'), arguments : ['@INPUT@', '@OUTPUT@'], output : '@BASENAME@.out.c')
+# Pic should be false to force soures to be compiled twice
+both_libraries('lib-with-generator', gen.process('libfile.c'), pic : false)
 dep = declare_dependency(link_with: both_libs)
 exe_shared = executable('prog-shared', 'main.c', link_with : both_libs.get_shared_lib())
 exe_static = executable('prog-static', 'main.c',
