Add metadata support in shared library version
Some projects use metadata when versioning, such as the Sailfish OS
build system. When trying to pass a version from such projects to the
meson build script and use it as a dynamic library version, an error
is thrown that the version should look like X.Y.Z.

However, Semantic Versioning 2.0 permits the use of metadata in the
version, see: https://semver.org/#spec-item-10

This commit adds support for metadata in dynamic library versions.
Fixes an issue: https://github.com/mesonbuild/meson/issues/10565

--- a/docs/yaml/functions/shared_library.yaml
+++ b/docs/yaml/functions/shared_library.yaml
@@ -16,6 +16,12 @@ kwargs:
       `libfoo.1.1.0.dylib`. If this is not specified, `soversion` is used
       instead (see above).
 
+      *(since 0.64.0)* The shared library version may contain build
+      metadata specified by adding `+` and a series of dot-separated
+      identifiers after the version string. Identifiers must contain
+      only ASCII alphanumeric characters and hyphens. For example:
+      `1.1.0+master.g21a338e`.
+
   soversion:
     type: str | int
     description: |
