--- a/docs/yaml/functions/install_data.yaml
+++ b/docs/yaml/functions/install_data.yaml
@@ -20,7 +20,7 @@ kwargs:
       If omitted, the directory defaults to `{datadir}/{projectname}` *(since 0.45.0)*.
 
   install_mode:
-    type: list[str | int]
+    type: list[str | int | bool]
     since: 0.38.0
     description: |
       specify the file mode in symbolic format and
