--- a/docs/yaml/functions/install_man.yaml
+++ b/docs/yaml/functions/install_man.yaml
@@ -17,7 +17,7 @@ varargs:
 
 kwargs:
   install_mode:
-    type: list[str | int]
+    type: list[str | int | bool]
     since: 0.47.0
     description: |
       Specify the file mode in symbolic format
